# aumos-privacy-engine

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  pyproject.toml
.github/workflows/: ci.yml
src/aumos_privacy_engine/: __init__.py  main.py  settings.py
src/aumos_privacy_engine/adapters/: __init__.py  accountant_bridge.py  analytics_repository.py  audit_reporter.py  epsilon_accountant.py  formal_prover.py  group_privacy.py  moment_accountant.py  opendp_adapter.py  privacy_amplifier.py  report_generator.py  sensitivity_analyzer.py
src/aumos_privacy_engine/adapters/dp_mechanisms/: __init__.py  exponential.py  gaussian.py  laplace.py  subsampled.py
src/aumos_privacy_engine/api/: __init__.py  router.py  schemas.py
src/aumos_privacy_engine/core/: __init__.py  composition_accountant.py  interfaces.py  models.py  services.py
tests/: test_composition_properties.py
